--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "https://github.com/rjackson/ember-cli-ic-ajax",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rjackson/ember-cli-ic-ajax"
+  },
   "keywords": [
     "ember-addon"
   ],
@@ -14,5 +17,10 @@
   "license": "MIT",
   "dependencies": {
     "ic-ajax": "~2.0.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/rjackson/ember-cli-ic-ajax/issues"
+  },
+  "homepage": "https://github.com/rjackson/ember-cli-ic-ajax",
+  "devDependencies": {}
 }
