--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-ic-ajax",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Include ic-ajax into an ember-cli application.",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,9 @@
   "dependencies": {
     "ic-ajax": "~2.0.1"
   },
+  "bundledDependencies": [
+    "ic-ajax"
+  ],
   "bugs": {
     "url": "https://github.com/rjackson/ember-cli-ic-ajax/issues"
   },
